        - Several build dependencies are gone: Jansson, Popt, CppUnit.
          See the individual sections below for details.
        - Updated the SnapPea kernel to the one shipped with SnapPy 3.0.3.
        - Updated the bundled copy of Normaliz to version 3.10.3 (30 May 2024).
    ENGINE:
        Class AbelianGroup:
            - New routine hash(), which uses the tight encoding.
        Enum Algorithm:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., ALG_BACKTRACK) have been
              renamed as scoped enum values (e.g., Algorithm::Backtrack).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Enum AngleAlg, AngleAlgFlags:
            - The individual flags now live inside AngleAlg, which is now a
              scoped enumeration for better type safety.  In paticular, the
              enum constants (e.g., AS_ALG_TREE) have been renamed as scoped
              enum values (e.g., AngleAlg::Tree).  The old constants have
              been kept as deprecated compile-time constants in the regina
              namespace.
            - Flags can still be combined bitwise; the resulting type is now
              just Flags<AngleAlg>, and this should all be happening
              automatically behind the scenes.  AngleAlgFlags is now
              just a deprecated alias for AngleAlg.
        Class AngleStructure:
            - The vector constructors are now templated, so that you can pass a
              vector of some type other than regina::Integer.
            - Added a spaceship operator (<=>) for comparisons.  This has the
              effect of implementing all comparison operators, not just
              less-than (<) as before.
        Class AngleStructures:
            - New routine sort().
        Enum Attachment::OwnershipPolicy:
            - This is now a scoped enumeration, for better type safety.